plugins {
    id 'java'
    id 'application'
}

// Project version and group
group = 'hu.bme.blackjack'
version = '1.0-SNAPSHOT'

// Java version setting
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JUnit 5 API and Params
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'
    
    // JUnit 5 Engine (Runtime)
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    
    // Launcher for Gradle (Critical!)
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
}

application {
    mainClass = 'blackjack.Main'
}

test {
    useJUnitPlatform()
    
    testLogging {
        events = ["passed", "skipped", "failed"]
        exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
        showStandardStreams = true
        showStackTraces = true
        showCauses = true
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}